--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lama-dev-next-dashboard",
   "version": "0.1.0",
-   "private": true,
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.12.0",
     "@hookform/resolvers": "^4.1.0",
     "@prisma/client": "^6.4.0",
     "@types/react-big-calendar": "^1.16.1",
@@ -20,6 +21,7 @@
     "react-calendar": "^5.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "ts-node": "^10.9.2",
     "zod": "^3.24.2"
