--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/elements": "^0.23.6",
     "@clerk/nextjs": "^6.12.0",
     "@hookform/resolvers": "^4.1.0",
     "@prisma/client": "^6.4.0",
     "@types/react-big-calendar": "^1.16.1",
     "moment": "^2.30.1",
     "next": "^14.2.23",
+    "next-cloudinary": "^6.16.0",
     "prisma": "^6.4.0",
     "react": "^18",
     "react-big-calendar": "^1.17.1",
